--- a/.gitignore
+++ b/.gitignore
@@ -1,61 +1,45 @@
+# This is a comment.
+# Blank lines or lines starting with # are ignored.
+# Inline comments are not supported.
+# This file contains a list of files to exclude from the git-repository.
+#
+# Official documentation can be found at https://git-scm.com/docs/gitignore
+# See also:
+# - https://github.com/github/gitignore/blob/master/Python.gitignore
+# - https://raw.githubusercontent.com/pypa/sampleproject/master/.gitignore
+# - https://stackoverflow.com/questions/tagged/gitignore
+#
+# Slashes matter:
+#   - If there is a slash at the beginning or middle (or both) of the pattern,
+#     then the pattern is relative to the directory level of the particular .gitignore file itself.
+#     Otherwise the pattern may also match at any level below the .gitignore level.
+#
+#   - If there is a / at the end of the pattern then the pattern will only match directories,
+#     otherwise the pattern can match both files and directories.
+
+#   - Symlinks are always files, even if they point to a dir. So never put a / at the end.
+
+# archived files
+/_archive/
+
 # dev-symlinks to .venv to make bin/python work
-# do not add a slash if there are symlinks
-bin
-lib
-pyvenv.cfg
+/bin
+/lib
+/pyvenv.cfg
 
-# Distribution / packaging
-.cache/
-_build/
+# exclude actual virtual-environment
+/.venv/
+
+# distribution / packaging
 dist/
-var/
 
-# vscode
-.vscode/*
-.idea
+# .env can contain secrets
+/.env
 
-# kate-editor
-*.kate-swp
+# exclude toplevel var-dir
+/var/
 
-# bckup-files
-*.bak
-
-# sonarcloud-analysis
-.scannerwork/
-
-# Byte-compiled / optimized / DLL files
+# excluded generated python-files Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
 *$py.class
-
-
-## Unit test / coverage reports
-#htmlcov/
-#.tox/
-#.nox/
-#.coverage
-#.coverage.*
-#.cache
-#_coverage
-#nosetests.xml
-#coverage.xml
-#*.cover
-#.hypothesis/
-#.pytest_cache/
-
-# Jupyter Notebook
-.ipynb_checkpoints
-
-# IPython
-profile_default/
-ipython_config.py
-
-# pyenv
-.python-version
-
-# linux-desktop
-.directory
-
-# Environments
-.env
-.venv
