--- a/pyproject.toml
+++ b/pyproject.toml
@@ -66,13 +66,13 @@ check_untyped_defs = true
 # disallow_untyped_defs = true
 exclude = "^bin/"
 ignore_missing_imports = true
-# mypy_path = ["./src", "./tests"]
+mypy_path = ["./src", "./tests"]
 
 
 [tool.poetry]
 name = "autoread_dotenv"
 version = "0.0.0" # version managed by poetry-dynamic-versioning
-description = " python-package"
+description = " python-package "
 readme = "docs/readme.rst"
 authors = ["Wouter Vanden Hove <wouter@libranet.eu>"]
 license = "MIT"
@@ -81,13 +81,17 @@ repository = "https://github.com/libranet/autoread_dotenv"
 documentation = "https://github.com/libranet/autoread_dotenv"
 keywords = ["entrypoints", "dotenv", "sitecustomize"]
 classifiers = [
-    "Development Status :: 3 - Alpha",
+    "Development Status :: 4 - Beta",
     "Environment :: Console",
     "Intended Audience :: Developers",
-    "License :: Commercial",
+    "License :: OSI Approved :: MIT License",
     "Operating System :: POSIX :: Linux",
+    "Programming Language :: Python :: 3.11",
     "Programming Language :: Python :: 3.10",
+    "Programming Language :: Python :: 3.9",
+    "Programming Language :: Python :: 3.8",
     "Programming Language :: Python :: Implementation :: CPython",
+    "Programming Language :: Python :: Implementation :: PyPy",
     "Typing :: Typed",
 ]
 
@@ -99,18 +103,19 @@ packages = [{ include = "autoread_dotenv", from = "src" }]
 python = ">=3.9.0,<4.0"
 python-dotenv = ">=1.0.0"
 sitecustomize-entrypoints = ">=0.1.0"
-ruff = "^0.0.254"
 
 [tool.poetry.group.dev.dependencies]
 black = { version = ">=22.1.0", allow-prereleases = true }
 flake8 = ">=4.0.1"
 flake8-pyproject = ">=1.2.2"
 isort = ">=5.10.1"
+lxml = ">=4.9.2"  # mypy coverage-report
 mypy = ">=0.931"
 pre-commit = ">=2.14.1"
 pre-commit-hooks = ">=4.1.0"
 pylint = ">=2.12.2"
 pyroma = ">=4.2"
+ruff = ">=0.0.254"
 
 [tool.poetry.group.docs.dependencies]
 autoapi = ">=2.0.1"
