--- a/pyproject.toml
+++ b/pyproject.toml
@@ -66,7 +66,7 @@ check_untyped_defs = true
 # disallow_untyped_defs = true
 exclude = "^bin/"
 ignore_missing_imports = true
-mypy_path = ["./src", "./tests"]
+mypy_path = ["src"]
 
 
 [tool.poetry]
