--- a/pyproject.toml
+++ b/pyproject.toml
@@ -71,7 +71,7 @@ mypy_path = ["src"]
 
 [tool.poetry]
 name = "autoread_dotenv"
-version = "0.0.0" # version managed by poetry-dynamic-versioning
+version = "1.0" # version managed by poetry-dynamic-versioning
 description = " python-package "
 readme = "docs/readme.rst"
 authors = ["Wouter Vanden Hove <wouter@libranet.eu>"]
@@ -187,3 +187,18 @@ addopts = "--junit-xml='var/coverage/pytest.xml'"
 # https://beta.ruff.rs/docs/configuration/
 cache-dir = "var/cache/ruff"
 line-length = 120
+
+[tool.poetry-release]
+release-replacements = [
+    { file="docs/changes.rst", pattern="\\(Unreleased\\)", replace="{version} ({date})" },
+    { file="src/__init__.py", pattern='__version__ = "{version}"', replace='__version__ = "{next_version}"'},
+    # { file="CHANGELOG.md", pattern="\\(https://semver.org/spec/v2.0.0.html\\).", replace="(https://semver.org/spec/v20.0.html).\n\n## [Unreleased]"},
+]
+disable-push = false
+disable-tag = false
+disable-dev = false
+release-commit-message = "Release {package_name} {version}"
+post-release-commit-message = "Start next development iteration {next_version}"
+tag-name = "{version}"
+sign-tag = true
+sign-commit = true
