--- a/pyproject.toml
+++ b/pyproject.toml
@@ -160,7 +160,7 @@ autoread_dotenv = "autoread_dotenv.autoread:autoread_dotenv"
 [tool.poetry-release]
 release-replacements = [
     { file="docs/changes.rst", pattern="TBD \\(Unreleased\\)", replace="{version} \\({date}\\)" },
-    { file="src/__init__.py", pattern='__version__ = "{version}"', replace='__version__ = "{next_version}"'},
+    { file="src/autoread_dotenv/__init__.py", pattern='__version__ = "{version}"', replace='__version__ = "{next_version}"'},
     # { file="CHANGELOG.md", pattern="\\(https://semver.org/spec/v2.0.0.html\\).", replace="(https://semver.org/spec/v20.0.html).\n\n## [Unreleased]"},
 ]
 disable-push = false
