--- a/pyproject.toml
+++ b/pyproject.toml
@@ -120,7 +120,9 @@ pyroma = ">=4.2"
 ruff = ">=0.0.254"
 
 [tool.poetry.group.docs.dependencies]
+# poetry install
 autoapi = ">=2.0.1"
+myst-parser = ">=1.0.0"
 recommonmark = ">=0.7.1"
 Sphinx = ">=4.4.0"
 sphinx-autoapi = ">=1.8.4"
