--- a/.readthedocs.yaml
+++ b/.readthedocs.yaml
@@ -12,7 +12,8 @@ sphinx:
   configuration: docs/conf.py
   fail_on_warning: true
 
-formats: all
+# formats: all
+formats: html
 
 python:
   install:
