--- a/.readthedocs.yaml
+++ b/.readthedocs.yaml
@@ -7,29 +7,23 @@ build:
   os: ubuntu-22.04
   tools:
     python: "3.11"
-
   jobs:
     post_create_environment:
+      - python -m pip install --upgrade pip
       # Install poetry
-      # https://python-poetry.org/docs/#installing-manually
       - pip install poetry
-      # Tell poetry to not use a virtual environment
-      - poetry config virtualenvs.create true
+      # Tell poetry to use a virtual environment
+      # - poetry config virtualenvs.create true
       # Install project's dependencies
       - poetry install --with docs
-      
+      - poetry add autoapi
 
-sphinx:
-  configuration: docs/conf.py
-  fail_on_warning: true
-
-# formats: all
-formats: 
-    - htmlzip
-    - pdf
-    - epub
+formats: all
 
 #python:
 #  install:
 #  - requirements: docs/requirements.txt
-  
+
+sphinx:
+  configuration: docs/conf.py
+  fail_on_warning: true
