--- a/.readthedocs.yaml
+++ b/.readthedocs.yaml
@@ -11,19 +11,22 @@ build:
     post_create_environment:
       - python -m pip install --upgrade pip
       # Install poetry
-      - pip install poetry
+      - python -m pip install poetry
       # Tell poetry to use a virtual environment
       # - poetry config virtualenvs.create true
       # Install project's dependencies
       - poetry install --with docs
-      - poetry -add autoapi
       - python -m pip install autoapi
+      - poetry add autoapi
 
 formats: all
 
-#python:
-#  install:
-#  - requirements: docs/requirements.txt
+python:
+  install:
+    - method: pip
+      path: .
+      # extra_requirements:
+      #   - docs
 
 sphinx:
   configuration: docs/conf.py
