--- a/.readthedocs.yaml
+++ b/.readthedocs.yaml
@@ -13,11 +13,11 @@ build:
       # Install poetry
       - python -m pip install poetry
       # Tell poetry to use a virtual environment
-      # - poetry config virtualenvs.create true
+      - poetry config virtualenvs.create false
       # Install project's dependencies
       - poetry install --with docs
       - python -m pip install autoapi
-      - poetry add autoapi
+      # - poetry add autoapi
 
 formats: all
 
