--- a/pyproject.toml
+++ b/pyproject.toml
@@ -124,6 +124,7 @@ recommonmark = ">=0.7.1"
 Sphinx = ">=4.4.0"
 sphinx-autoapi = ">=1.8.4"
 sphinx-rtd-theme = ">=1.0.0"
+markupsafe = "^2.1.2"
 
 [tool.poetry.group.ipython.dependencies]
 ipdb = ">=0.13.9"
