--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -11,28 +11,24 @@
 #   > pre-commit autoupdate
 #   > pre-commit run --all-files
 
-
 repos:
-
     # docs: https://black.readthedocs.io/en/stable/integrations/source_version_control.html
     - repo: local
       hooks:
           - id: black
             name: black
-            entry: black
-            args: [
-                "--config=pyproject.toml",
-                # "--check",  # don't write the files back, just return the status.
-                ]
-            language: system  # use executable found on path
-            types: [python]   # check only specific filetypes
+            entry: .venv/bin/black
+            args: ["--config=pyproject.toml"]
+            # "--check",  # don't write the files back, just return the status.
+            language: system # use executable found on path
+            types: [python] # check only specific filetypes
 
     # docs: https://flake8.pycqa.org/en/latest/user/using-hooks.html
     - repo: local
       hooks:
           - id: flake8
             name: flake8
-            entry: flake8
+            entry: .venv/bin/flake8
             language: system
             types: [python]
 
@@ -41,7 +37,7 @@ repos:
       hooks:
           - id: isort
             name: isort
-            entry: isort
+            entry: .venv/bin/isort
             args: ["--settings-path=pyproject.toml"]
             language: system
 
@@ -49,7 +45,7 @@ repos:
       hooks:
           - id: mypy
             name: mypy
-            entry: mypy
+            entry: .venv/bin/mypy
             language: system
             types: [python]
 
@@ -57,15 +53,11 @@ repos:
       hooks:
           - id: bandit
             name: bandit
-            entry: bandit
+            entry: .venv/bin/bandit
             language: system
             types: [python]
             # see https://github.com/PyCQA/bandit/issues/318
-            args: [
-              "--configfile pyproject.toml",
-              "--baseline etc/bandit-baseline.json",
-              ]
-
+            args: ["--configfile pyproject.toml", "--baseline etc/bandit-baseline.json"]
 
     # The following are all pre-commit-hooks
     # docs: https://github.com/pre-commit/pre-commit-hooks
@@ -74,7 +66,7 @@ repos:
       hooks:
           - id: debug-statements
             name: check-debug-statements
-            entry: debug-statement-hook
+            entry: .venv/bin/debug-statement-hook
             language: system
             types: [python]
 
@@ -82,7 +74,7 @@ repos:
       hooks:
           - id: check-toml
             name: check-toml
-            entry: check-toml
+            entry: .venv/bin/check-toml
             language: system
             types: [toml]
 
@@ -90,7 +82,7 @@ repos:
       hooks:
           - id: end-of-file-fixer
             name: fix-end-of-filer
-            entry: end-of-file-fixer
+            entry: .venv/bin/end-of-file-fixer
             language: system
             types: [python]
 
@@ -98,7 +90,7 @@ repos:
       hooks:
           - id: fix-encoding-pragma
             name: fix-encoding-pragma
-            entry: fix-encoding-pragma
+            entry: .venv/bin/fix-encoding-pragma --remove
             language: system
             types: [python]
 
@@ -106,7 +98,7 @@ repos:
       hooks:
           - id: mixed-line-ending
             name: fix-mixed-line-ending
-            entry: mixed-line-ending
+            entry: .venv/bin/mixed-line-ending
             language: system
             types: [text]
 
@@ -114,6 +106,6 @@ repos:
       hooks:
           - id: trailing-whitespace
             name: fix-trailing-whitespace
-            entry: trailing-whitespace-fixer
+            entry: .venv/bin/trailing-whitespace-fixer
             language: system
             types: [text]
