--- a/.readthedocs.yaml
+++ b/.readthedocs.yaml
@@ -4,30 +4,32 @@
 version: 2
 
 build:
-  os: ubuntu-22.04
-  tools:
-    python: "3.11"
-  jobs:
-    post_create_environment:
-      - python -m pip install --upgrade pip
-      # Install poetry
-      - python -m pip install poetry
-      # Tell poetry to use a virtual environment
-      - poetry config virtualenvs.create false
-      # Install project's dependencies
-      - poetry install --with docs
-      - python -m pip install autoapi
-      # - poetry add autoapi
+    os: ubuntu-22.04
+    tools:
+        python: "3.11"
+    jobs:
+        post_create_environment:
+            - python -c "import sys;print(sys.path)"
+            - python -m pip install --upgrade pip
+            # Install poetry
+            - python -m pip install poetry
+            # Tell poetry to use a virtual environment
+            - poetry config virtualenvs.create false
+            # Install project's dependencies
+            - poetry install --with docs
+            - python -m pip install autoapi
+            - tree
+            # - poetry add autoapi
 
 formats: all
 
-python:
-  install:
-    - method: pip
-      path: .
-      # extra_requirements:
-      #   - docs
+# python:
+#     install:
+#         - method: pip
+#           path: .
+# extra_requirements:
+#   - docs
 
 sphinx:
-  configuration: docs/conf.py
-  fail_on_warning: true
+    configuration: docs/conf.py
+    fail_on_warning: true
