--- a/.readthedocs.yaml
+++ b/.readthedocs.yaml
@@ -22,6 +22,7 @@ build:
             - python -m pip install autoapi
             - ls -al /home/docs/checkouts/readthedocs.org/user_builds/autoread-dotenv/envs/latest/lib/python3.11/site-packages
             # - poetry add autoapi
+            - python -m pip install --no-cache-dir -r docs/requirements.txt
 
 formats: all
 
