--- a/.readthedocs.yaml
+++ b/.readthedocs.yaml
@@ -23,6 +23,7 @@ build:
             - ls -al /home/docs/checkouts/readthedocs.org/user_builds/autoread-dotenv/envs/latest/lib/python3.11/site-packages
             # - poetry add autoapi
             # - python -m pip install --no-cache-dir -r docs/requirements.txt
+            - python -m pip install -e .
 
 formats: all
 
