--- a/.readthedocs.yaml
+++ b/.readthedocs.yaml
@@ -10,6 +10,7 @@ build:
     jobs:
         post_create_environment:
             - pwd
+            - which python
             - python -c "import sys;print(sys.path)"
             - python -m pip install --upgrade pip
             # Install poetry
