--- a/.readthedocs.yaml
+++ b/.readthedocs.yaml
@@ -25,6 +25,8 @@ build:
             # - poetry add autoapi
             # - python -m pip install --no-cache-dir -r docs/requirements.txt
             - python -m pip install -e .
+            - python -c "import markupsafe;markupsafe.__path__"
+            - python -c "import autoapi;autoapi.__path__"
 
 formats: all
 
