--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -12,6 +12,16 @@
 #   > pre-commit run --all-files
 
 repos:
+    # docs: https://github.com/charliermarsh/ruff-pre-commit
+    - repo: local
+      hooks:
+          - id: ruff
+            name: ruff
+            entry: .venv/bin/ruff
+            language: system
+            args: [--fix, --exit-non-zero-on-fix]
+            types: [python]
+
     # docs: https://black.readthedocs.io/en/stable/integrations/source_version_control.html
     - repo: local
       hooks:
@@ -23,15 +33,6 @@ repos:
             language: system # use executable found on path
             types: [python] # check only specific filetypes
 
-    # docs: https://flake8.pycqa.org/en/latest/user/using-hooks.html
-    - repo: local
-      hooks:
-          - id: flake8
-            name: flake8
-            entry: .venv/bin/flake8
-            language: system
-            types: [python]
-
     # docs: https://pycqa.github.io/isort/docs/configuration/pre-commit.html
     - repo: local
       hooks:
@@ -41,6 +42,15 @@ repos:
             args: ["--settings-path=pyproject.toml"]
             language: system
 
+    # docs: https://flake8.pycqa.org/en/latest/user/using-hooks.html
+    - repo: local
+      hooks:
+          - id: flake8
+            name: flake8
+            entry: .venv/bin/flake8
+            language: system
+            types: [python]
+
     - repo: local
       hooks:
           - id: mypy
@@ -49,15 +59,15 @@ repos:
             language: system
             types: [python]
 
-    - repo: local
-      hooks:
-          - id: bandit
-            name: bandit
-            entry: .venv/bin/bandit
-            language: system
-            types: [python]
-            # see https://github.com/PyCQA/bandit/issues/318
-            args: ["--configfile pyproject.toml", "--baseline etc/bandit-baseline.json"]
+    # - repo: local
+    #   hooks:
+    #       - id: bandit
+    #         name: bandit
+    #         entry: .venv/bin/bandit
+    #         language: system
+    #         types: [python]
+    #         # see https://github.com/PyCQA/bandit/issues/318
+    #         args: ["--configfile pyproject.toml", "--baseline etc/bandit-baseline.json"]
 
     # The following are all pre-commit-hooks
     # docs: https://github.com/pre-commit/pre-commit-hooks
