--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -119,3 +119,22 @@ repos:
             entry: .venv/bin/trailing-whitespace-fixer
             language: system
             types: [text]
+
+    - repo: local
+      hooks:
+          - id: poetry-check
+            name: poetry-check
+            description: run poetry check to validate config
+            entry: poetry check
+            language: python
+            language_version: python3
+            pass_filenames: false
+            files: ^pyproject.toml$
+
+          - id: poetry-lock
+            name: poetry-lock
+            description: run poetry lock to update lock file
+            entry: poetry lock
+            language: python
+            language_version: python3
+            pass_filenames: false
