--- a/.github/workflows/testing.yaml
+++ b/.github/workflows/testing.yaml
@@ -33,8 +33,11 @@ concurrency:
 jobs:
     python-tests:
         name: Python tests
+        runs-on: ${{ matrix.os }}
+        timeout-minutes: 10
 
         strategy:
+            fail-fast: false
             matrix:
                 os:
                     - ubuntu-latest
@@ -43,16 +46,11 @@ jobs:
                     - "3.9"
                     - "3.10"
                     - "3.11"
-                    - "3.12-dev"
-                include:
-                    # Run 3.12 tests with relaxed constraints
-                    - python-version: "3.12-dev"
-                      relax: true # ??
-
-            fail-fast: false
-
-        runs-on: ${{ matrix.os }}
-        timeout-minutes: 10
+                    # - "3.12-dev"
+                # include:
+                #     # Run 3.12 tests with relaxed constraints
+                #     - python-version: "3.12-dev"
+                #       relax: true # ??
 
         steps:
             - uses: actions/checkout@v3
@@ -73,20 +71,7 @@ jobs:
 
             - name: Install packages
               run: |
-                  make create-dirs
-                  make symlink-venv-dirs
-                  make dotenv-install
-                  make poetry-install
-
-            # - name: Install packages
-            #   run: |
-            #       poetry install
-
-            # - name: Relax constraints
-            #   if: ${{ matrix.relax }}
-            #   run: |
-            #       poetry self add $(pwd)
-            #       poetry relax --update
+                  make install
 
             - name: Run tests
               run: |
