--- a/.readthedocs.yaml
+++ b/.readthedocs.yaml
@@ -16,7 +16,7 @@ build:
       # Tell poetry to not use a virtual environment
       - poetry config virtualenvs.create true
       # Install project's dependencies
-      - poetry install
+      - poetry install --with docs
       
 
 sphinx:
