--- a/.readthedocs.yaml
+++ b/.readthedocs.yaml
@@ -9,25 +9,26 @@ build:
         python: "3.11"
     jobs:
         post_create_environment:
-            - pwd
-            - which python
-            - python -c "import sys;print(sys.path)"
-            - python -m pip install --upgrade pip
-            # Install poetry
-            - python -m pip install poetry
-            # Tell poetry to use a virtual environment
-            - poetry config virtualenvs.create false
-            # Install project's dependencies
-            - poetry install --with docs
-            - poetry install
-            - python -m pip install autoapi
-            - ls -al /home/docs/checkouts/readthedocs.org/user_builds/autoread-dotenv/envs/latest/lib/python3.11/site-packages
-            # - poetry add autoapi
+            # - pwd
+            # - which python
+            # - python -c "import sys;print(sys.path)"
+            # - python -m pip install --upgrade pip
+            # # Install poetry
+            # - python -m pip install poetry
+            # # Tell poetry to use a virtual environment
+            # - poetry config virtualenvs.create false
+            # # Install project's dependencies
+            # - poetry install --with docs
+            # - poetry install
+            # - python -m pip install autoapi
+            # - ls -al /home/docs/checkouts/readthedocs.org/user_builds/autoread-dotenv/envs/latest/lib/python3.11/site-packages
+            # # - poetry add autoapi
 
-            - python -m pip install -e .
-            - python -c "import markupsafe;markupsafe.__path__"
-            - python -c "import autoapi;autoapi.__path__"
-            - python -m pip install  -r docs/requirements.txt
+            # - python -m pip install -e .
+            # - python -c "import markupsafe;markupsafe.__path__"
+            # - python -c "import autoapi;autoapi.__path__"
+            - make install
+            # - python -m pip install  -r docs/requirements.txt
 
 formats:
     - htmlzip
