--- a/.readthedocs.yaml
+++ b/.readthedocs.yaml
@@ -9,17 +9,18 @@ build:
         python: "3.11"
     jobs:
         post_create_environment:
+            - make install-rtd
             # - pwd
             # - which python
             # - python -c "import sys;print(sys.path)"
             # - python -m pip install --upgrade pip
             # # Install poetry
-            - python -m pip install poetry
-            # # Tell poetry to use a virtual environment
-            - poetry config virtualenvs.create false --local
-            # # Install project's dependencies
-            # - poetry install --with docs
-            - poetry install
+            # - python -m pip install poetry
+            # # # Tell poetry to use a virtual environment
+            # - poetry config virtualenvs.create false --local
+            # # # Install project's dependencies
+            # # - poetry install --with docs
+            # - poetry install
             # - python -m pip install autoapi
             # - ls -al /home/docs/checkouts/readthedocs.org/user_builds/autoread-dotenv/envs/latest/lib/python3.11/site-packages
             # # - poetry add autoapi
